# Way2AGI

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
channels/src/: telegram.ts
cli/: __main__.py  app.py  app.tcss  config.py  llm_client.py
cli/screens/: chat.py  dashboard.py  diagnostics.py  memory_browser.py  settings.py
cli/tests/: test_config.py
cli/widgets/: header.py  status.py
cognition/src/: index.ts  initiative.ts  metacontroller.ts  scheduler.ts  workspace.ts
cognition/src/__tests__/: goals.test.ts
docs/: training_log_pc_2026-03-06.md
docs/plans/: 2026-03-06-terminal-app-design.md  2026-03-06-terminal-app-v1-plan.md  2026-03-06-way2agi-design.md
gateway/src/: daemon.ts  pairing.ts
memory/src/: server.py
memory/tests/: test_server.py
onboarding/src/: wizard.ts
orchestrator/src/: cache.py  composer.py  registry.py  resilience.py
research/src/: cron.py  gguf_pipeline.py  github_scanner.py  model_scanner.py  pipeline.py  training_data.py
scripts/: PC_ANLEITUNG.md  convert_gguf.py  train_on_pc.py
voice/: package.json
voice/src/: tts.ts
