[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "way2agi"
version = "0.1.0"
description = "Cognitive AI Agent — Memory & Orchestration Layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlite-vec>=0.1",
]

[project.optional-dependencies]
memory = ["elias-memory>=0.1"]
orchestrator = ["rank-bm25>=0.2"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["memory/tests", "orchestrator/tests"]
pythonpath = ["memory/src", "orchestrator/src"]
asyncio_mode = "auto"
